src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     program -> <empty>
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> statement
Rule 5     statement -> declaration NEWLINE
Rule 6     statement -> assignment NEWLINE
Rule 7     statement -> if_statement
Rule 8     statement -> TYPE register
Rule 9     statement -> while_statement
Rule 10    statement -> COMMENT NEWLINE
Rule 11    statement -> MLCOMMENT NEWLINE
Rule 12    statement -> funct_decl
Rule 13    statement -> NEWLINE
Rule 14    declaration -> INT_TYPE var_list
Rule 15    declaration -> FLOAT_TYPE var_list
Rule 16    declaration -> CHAR_TYPE var_list
Rule 17    declaration -> BOOL_TYPE var_list
Rule 18    declaration -> ID ID
Rule 19    register -> ID COLON block
Rule 20    var_decl -> ID
Rule 21    var_decl -> LBRACKET expression RBRACKET ID
Rule 22    var_list -> var_list COMMA var_decl
Rule 23    var_list -> var_decl
Rule 24    assignment -> ID EQUALS expression
Rule 25    assignment -> ID LBRACKET DECIMAL RBRACKET EQUALS expression
Rule 26    assignment -> ID LBRACKET ID RBRACKET EQUALS expression
Rule 27    assignment -> declaration EQUALS expression
Rule 28    assignment -> ID EQUALS assignment
Rule 29    assignment -> ID DOT unique_assignment
Rule 30    unique_assignment -> ID EQUALS expression
Rule 31    unique_assignment -> ID LBRACKET DECIMAL RBRACKET EQUALS expression
Rule 32    unique_assignment -> ID LBRACKET ID RBRACKET EQUALS expression
Rule 33    funct_decl -> DEF type_funct ID LPAREN arg_funct RPAREN COLON block_funct
Rule 34    type_funct -> INT_TYPE
Rule 35    type_funct -> FLOAT_TYPE
Rule 36    type_funct -> BOOL_TYPE
Rule 37    type_funct -> ID
Rule 38    arg_funct -> type_funct ID extra another
Rule 39    extra -> COMMA ID extra
Rule 40    extra -> <empty>
Rule 41    another -> SEMICOLON arg_funct
Rule 42    another -> <empty>
Rule 43    block_funct -> LBRACE statement_list funct_ret RBRACE
Rule 44    funct_ret -> RETURN ID newlines
Rule 45    newlines -> NEWLINE
Rule 46    newlines -> <empty>
Rule 47    if_statement -> IF expression COLON block else
Rule 48    else -> NEWLINE ELSE COLON block
Rule 49    else -> NEWLINE
Rule 50    while_statement -> WHILE expression COLON block
Rule 51    block -> LBRACE statement_list RBRACE
Rule 52    expression -> expression PLUS expression
Rule 53    expression -> expression MINUS expression
Rule 54    expression -> expression TIMES expression
Rule 55    expression -> expression DIVIDE expression
Rule 56    expression -> expression EQ expression
Rule 57    expression -> expression GT expression
Rule 58    expression -> expression LT expression
Rule 59    expression -> expression GE expression
Rule 60    expression -> expression LE expression
Rule 61    expression -> expression AND expression
Rule 62    expression -> expression OR expression
Rule 63    expression -> NOT expression
Rule 64    expression -> MINUS expression
Rule 65    expression -> PLUS expression
Rule 66    expression -> LPAREN expression RPAREN
Rule 67    expression -> DECIMAL
Rule 68    expression -> BINARY
Rule 69    expression -> OCTAL
Rule 70    expression -> HEXADECIMAL
Rule 71    expression -> FLOAT_CONST
Rule 72    expression -> TRUE
Rule 73    expression -> FALSE
Rule 74    expression -> CHAR_CONST
Rule 75    expression -> ID

Terminals, with rules where they appear

AND                  : 61
BINARY               : 68
BOOL_TYPE            : 17 36
CHAR_CONST           : 74
CHAR_TYPE            : 16
COLON                : 19 33 47 48 50
COMMA                : 22 39
COMMENT              : 10
DECIMAL              : 25 31 67
DEF                  : 33
DIVIDE               : 55
DOT                  : 29
ELSE                 : 48
EQ                   : 56
EQUALS               : 24 25 26 27 28 30 31 32
FALSE                : 73
FLOAT_CONST          : 71
FLOAT_TYPE           : 15 35
GE                   : 59
GT                   : 57
HEXADECIMAL          : 70
ID                   : 18 18 19 20 21 24 25 26 26 28 29 30 31 32 32 33 37 38 39 44 75
IF                   : 47
INT_TYPE             : 14 34
LBRACE               : 43 51
LBRACKET             : 21 25 26 31 32
LE                   : 60
LPAREN               : 33 66
LT                   : 58
MINUS                : 53 64
MLCOMMENT            : 11
NEWLINE              : 5 6 10 11 13 45 48 49
NOT                  : 63
OCTAL                : 69
OR                   : 62
PLUS                 : 52 65
RBRACE               : 43 51
RBRACKET             : 21 25 26 31 32
RETURN               : 44
RPAREN               : 33 66
SEMICOLON            : 41
TIMES                : 54
TRUE                 : 72
TYPE                 : 8
WHILE                : 50
error                : 

Nonterminals, with rules where they appear

another              : 38
arg_funct            : 33 41
assignment           : 6 28
block                : 19 47 48 50
block_funct          : 33
declaration          : 5 27
else                 : 47
expression           : 21 24 25 26 27 30 31 32 47 50 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65 66
extra                : 38 39
funct_decl           : 12
funct_ret            : 43
if_statement         : 7
newlines             : 44
program              : 0
register             : 8
statement            : 3 4
statement_list       : 1 3 43 51
type_funct           : 33 38
unique_assignment    : 29
var_decl             : 22 23
var_list             : 14 15 16 17 22
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) program -> .
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . if_statement
    (8) statement -> . TYPE register
    (9) statement -> . while_statement
    (10) statement -> . COMMENT NEWLINE
    (11) statement -> . MLCOMMENT NEWLINE
    (12) statement -> . funct_decl
    (13) statement -> . NEWLINE
    (14) declaration -> . INT_TYPE var_list
    (15) declaration -> . FLOAT_TYPE var_list
    (16) declaration -> . CHAR_TYPE var_list
    (17) declaration -> . BOOL_TYPE var_list
    (18) declaration -> . ID ID
    (24) assignment -> . ID EQUALS expression
    (25) assignment -> . ID LBRACKET DECIMAL RBRACKET EQUALS expression
    (26) assignment -> . ID LBRACKET ID RBRACKET EQUALS expression
    (27) assignment -> . declaration EQUALS expression
    (28) assignment -> . ID EQUALS assignment
    (29) assignment -> . ID DOT unique_assignment
    (47) if_statement -> . IF expression COLON block else
    (50) while_statement -> . WHILE expression COLON block
    (33) funct_decl -> . DEF type_funct ID LPAREN arg_funct RPAREN COLON block_funct

    $end            reduce using rule 2 (program -> .)
    TYPE            shift and go to state 8
    COMMENT         shift and go to state 10
    MLCOMMENT       shift and go to state 11
    NEWLINE         shift and go to state 5
    INT_TYPE        shift and go to state 13
    FLOAT_TYPE      shift and go to state 14
    CHAR_TYPE       shift and go to state 15
    BOOL_TYPE       shift and go to state 16
    ID              shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    DEF             shift and go to state 20

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    while_statement                shift and go to state 9
    funct_decl                     shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . if_statement
    (8) statement -> . TYPE register
    (9) statement -> . while_statement
    (10) statement -> . COMMENT NEWLINE
    (11) statement -> . MLCOMMENT NEWLINE
    (12) statement -> . funct_decl
    (13) statement -> . NEWLINE
    (14) declaration -> . INT_TYPE var_list
    (15) declaration -> . FLOAT_TYPE var_list
    (16) declaration -> . CHAR_TYPE var_list
    (17) declaration -> . BOOL_TYPE var_list
    (18) declaration -> . ID ID
    (24) assignment -> . ID EQUALS expression
    (25) assignment -> . ID LBRACKET DECIMAL RBRACKET EQUALS expression
    (26) assignment -> . ID LBRACKET ID RBRACKET EQUALS expression
    (27) assignment -> . declaration EQUALS expression
    (28) assignment -> . ID EQUALS assignment
    (29) assignment -> . ID DOT unique_assignment
    (47) if_statement -> . IF expression COLON block else
    (50) while_statement -> . WHILE expression COLON block
    (33) funct_decl -> . DEF type_funct ID LPAREN arg_funct RPAREN COLON block_funct

    $end            reduce using rule 1 (program -> statement_list .)
    TYPE            shift and go to state 8
    COMMENT         shift and go to state 10
    MLCOMMENT       shift and go to state 11
    NEWLINE         shift and go to state 5
    INT_TYPE        shift and go to state 13
    FLOAT_TYPE      shift and go to state 14
    CHAR_TYPE       shift and go to state 15
    BOOL_TYPE       shift and go to state 16
    ID              shift and go to state 17
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    DEF             shift and go to state 20

    statement                      shift and go to state 21
    declaration                    shift and go to state 4
    assignment                     shift and go to state 6
    if_statement                   shift and go to state 7
    while_statement                shift and go to state 9
    funct_decl                     shift and go to state 12

state 3

    (4) statement_list -> statement .

    TYPE            reduce using rule 4 (statement_list -> statement .)
    COMMENT         reduce using rule 4 (statement_list -> statement .)
    MLCOMMENT       reduce using rule 4 (statement_list -> statement .)
    NEWLINE         reduce using rule 4 (statement_list -> statement .)
    INT_TYPE        reduce using rule 4 (statement_list -> statement .)
    FLOAT_TYPE      reduce using rule 4 (statement_list -> statement .)
    CHAR_TYPE       reduce using rule 4 (statement_list -> statement .)
    BOOL_TYPE       reduce using rule 4 (statement_list -> statement .)
    ID              reduce using rule 4 (statement_list -> statement .)
    IF              reduce using rule 4 (statement_list -> statement .)
    WHILE           reduce using rule 4 (statement_list -> statement .)
    DEF             reduce using rule 4 (statement_list -> statement .)
    $end            reduce using rule 4 (statement_list -> statement .)
    RBRACE          reduce using rule 4 (statement_list -> statement .)
    RETURN          reduce using rule 4 (statement_list -> statement .)


state 4

    (5) statement -> declaration . NEWLINE
    (27) assignment -> declaration . EQUALS expression

    NEWLINE         shift and go to state 22
    EQUALS          shift and go to state 23


state 5

    (13) statement -> NEWLINE .

    TYPE            reduce using rule 13 (statement -> NEWLINE .)
    COMMENT         reduce using rule 13 (statement -> NEWLINE .)
    MLCOMMENT       reduce using rule 13 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 13 (statement -> NEWLINE .)
    INT_TYPE        reduce using rule 13 (statement -> NEWLINE .)
    FLOAT_TYPE      reduce using rule 13 (statement -> NEWLINE .)
    CHAR_TYPE       reduce using rule 13 (statement -> NEWLINE .)
    BOOL_TYPE       reduce using rule 13 (statement -> NEWLINE .)
    ID              reduce using rule 13 (statement -> NEWLINE .)
    IF              reduce using rule 13 (statement -> NEWLINE .)
    WHILE           reduce using rule 13 (statement -> NEWLINE .)
    DEF             reduce using rule 13 (statement -> NEWLINE .)
    $end            reduce using rule 13 (statement -> NEWLINE .)
    RBRACE          reduce using rule 13 (statement -> NEWLINE .)
    RETURN          reduce using rule 13 (statement -> NEWLINE .)


state 6

    (6) statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 24


state 7

    (7) statement -> if_statement .

    TYPE            reduce using rule 7 (statement -> if_statement .)
    COMMENT         reduce using rule 7 (statement -> if_statement .)
    MLCOMMENT       reduce using rule 7 (statement -> if_statement .)
    NEWLINE         reduce using rule 7 (statement -> if_statement .)
    INT_TYPE        reduce using rule 7 (statement -> if_statement .)
    FLOAT_TYPE      reduce using rule 7 (statement -> if_statement .)
    CHAR_TYPE       reduce using rule 7 (statement -> if_statement .)
    BOOL_TYPE       reduce using rule 7 (statement -> if_statement .)
    ID              reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    DEF             reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    RBRACE          reduce using rule 7 (statement -> if_statement .)
    RETURN          reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> TYPE . register
    (19) register -> . ID COLON block

    ID              shift and go to state 26

    register                       shift and go to state 25

state 9

    (9) statement -> while_statement .

    TYPE            reduce using rule 9 (statement -> while_statement .)
    COMMENT         reduce using rule 9 (statement -> while_statement .)
    MLCOMMENT       reduce using rule 9 (statement -> while_statement .)
    NEWLINE         reduce using rule 9 (statement -> while_statement .)
    INT_TYPE        reduce using rule 9 (statement -> while_statement .)
    FLOAT_TYPE      reduce using rule 9 (statement -> while_statement .)
    CHAR_TYPE       reduce using rule 9 (statement -> while_statement .)
    BOOL_TYPE       reduce using rule 9 (statement -> while_statement .)
    ID              reduce using rule 9 (statement -> while_statement .)
    IF              reduce using rule 9 (statement -> while_statement .)
    WHILE           reduce using rule 9 (statement -> while_statement .)
    DEF             reduce using rule 9 (statement -> while_statement .)
    $end            reduce using rule 9 (statement -> while_statement .)
    RBRACE          reduce using rule 9 (statement -> while_statement .)
    RETURN          reduce using rule 9 (statement -> while_statement .)


state 10

    (10) statement -> COMMENT . NEWLINE

    NEWLINE         shift and go to state 27


state 11

    (11) statement -> MLCOMMENT . NEWLINE

    NEWLINE         shift and go to state 28


state 12

    (12) statement -> funct_decl .

    TYPE            reduce using rule 12 (statement -> funct_decl .)
    COMMENT         reduce using rule 12 (statement -> funct_decl .)
    MLCOMMENT       reduce using rule 12 (statement -> funct_decl .)
    NEWLINE         reduce using rule 12 (statement -> funct_decl .)
    INT_TYPE        reduce using rule 12 (statement -> funct_decl .)
    FLOAT_TYPE      reduce using rule 12 (statement -> funct_decl .)
    CHAR_TYPE       reduce using rule 12 (statement -> funct_decl .)
    BOOL_TYPE       reduce using rule 12 (statement -> funct_decl .)
    ID              reduce using rule 12 (statement -> funct_decl .)
    IF              reduce using rule 12 (statement -> funct_decl .)
    WHILE           reduce using rule 12 (statement -> funct_decl .)
    DEF             reduce using rule 12 (statement -> funct_decl .)
    $end            reduce using rule 12 (statement -> funct_decl .)
    RBRACE          reduce using rule 12 (statement -> funct_decl .)
    RETURN          reduce using rule 12 (statement -> funct_decl .)


state 13

    (14) declaration -> INT_TYPE . var_list
    (22) var_list -> . var_list COMMA var_decl
    (23) var_list -> . var_decl
    (20) var_decl -> . ID
    (21) var_decl -> . LBRACKET expression RBRACKET ID

    ID              shift and go to state 31
    LBRACKET        shift and go to state 32

    var_list                       shift and go to state 29
    var_decl                       shift and go to state 30

state 14

    (15) declaration -> FLOAT_TYPE . var_list
    (22) var_list -> . var_list COMMA var_decl
    (23) var_list -> . var_decl
    (20) var_decl -> . ID
    (21) var_decl -> . LBRACKET expression RBRACKET ID

    ID              shift and go to state 31
    LBRACKET        shift and go to state 32

    var_list                       shift and go to state 33
    var_decl                       shift and go to state 30

state 15

    (16) declaration -> CHAR_TYPE . var_list
    (22) var_list -> . var_list COMMA var_decl
    (23) var_list -> . var_decl
    (20) var_decl -> . ID
    (21) var_decl -> . LBRACKET expression RBRACKET ID

    ID              shift and go to state 31
    LBRACKET        shift and go to state 32

    var_list                       shift and go to state 34
    var_decl                       shift and go to state 30

state 16

    (17) declaration -> BOOL_TYPE . var_list
    (22) var_list -> . var_list COMMA var_decl
    (23) var_list -> . var_decl
    (20) var_decl -> . ID
    (21) var_decl -> . LBRACKET expression RBRACKET ID

    ID              shift and go to state 31
    LBRACKET        shift and go to state 32

    var_list                       shift and go to state 35
    var_decl                       shift and go to state 30

state 17

    (18) declaration -> ID . ID
    (24) assignment -> ID . EQUALS expression
    (25) assignment -> ID . LBRACKET DECIMAL RBRACKET EQUALS expression
    (26) assignment -> ID . LBRACKET ID RBRACKET EQUALS expression
    (28) assignment -> ID . EQUALS assignment
    (29) assignment -> ID . DOT unique_assignment

    ID              shift and go to state 36
    EQUALS          shift and go to state 37
    LBRACKET        shift and go to state 38
    DOT             shift and go to state 39


state 18

    (47) if_statement -> IF . expression COLON block else
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression TIMES expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression EQ expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression LT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression LE expression
    (61) expression -> . expression AND expression
    (62) expression -> . expression OR expression
    (63) expression -> . NOT expression
    (64) expression -> . MINUS expression
    (65) expression -> . PLUS expression
    (66) expression -> . LPAREN expression RPAREN
    (67) expression -> . DECIMAL
    (68) expression -> . BINARY
    (69) expression -> . OCTAL
    (70) expression -> . HEXADECIMAL
    (71) expression -> . FLOAT_CONST
    (72) expression -> . TRUE
    (73) expression -> . FALSE
    (74) expression -> . CHAR_CONST
    (75) expression -> . ID

    NOT             shift and go to state 43
    MINUS           shift and go to state 42
    PLUS            shift and go to state 41
    LPAREN          shift and go to state 44
    DECIMAL         shift and go to state 45
    BINARY          shift and go to state 46
    OCTAL           shift and go to state 47
    HEXADECIMAL     shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    CHAR_CONST      shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 40

state 19

    (50) while_statement -> WHILE . expression COLON block
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression TIMES expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression EQ expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression LT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression LE expression
    (61) expression -> . expression AND expression
    (62) expression -> . expression OR expression
    (63) expression -> . NOT expression
    (64) expression -> . MINUS expression
    (65) expression -> . PLUS expression
    (66) expression -> . LPAREN expression RPAREN
    (67) expression -> . DECIMAL
    (68) expression -> . BINARY
    (69) expression -> . OCTAL
    (70) expression -> . HEXADECIMAL
    (71) expression -> . FLOAT_CONST
    (72) expression -> . TRUE
    (73) expression -> . FALSE
    (74) expression -> . CHAR_CONST
    (75) expression -> . ID

    NOT             shift and go to state 43
    MINUS           shift and go to state 42
    PLUS            shift and go to state 41
    LPAREN          shift and go to state 44
    DECIMAL         shift and go to state 45
    BINARY          shift and go to state 46
    OCTAL           shift and go to state 47
    HEXADECIMAL     shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    CHAR_CONST      shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 54

state 20

    (33) funct_decl -> DEF . type_funct ID LPAREN arg_funct RPAREN COLON block_funct
    (34) type_funct -> . INT_TYPE
    (35) type_funct -> . FLOAT_TYPE
    (36) type_funct -> . BOOL_TYPE
    (37) type_funct -> . ID

    INT_TYPE        shift and go to state 57
    FLOAT_TYPE      shift and go to state 58
    BOOL_TYPE       shift and go to state 59
    ID              shift and go to state 56

    type_funct                     shift and go to state 55

state 21

    (3) statement_list -> statement_list statement .

    TYPE            reduce using rule 3 (statement_list -> statement_list statement .)
    COMMENT         reduce using rule 3 (statement_list -> statement_list statement .)
    MLCOMMENT       reduce using rule 3 (statement_list -> statement_list statement .)
    NEWLINE         reduce using rule 3 (statement_list -> statement_list statement .)
    INT_TYPE        reduce using rule 3 (statement_list -> statement_list statement .)
    FLOAT_TYPE      reduce using rule 3 (statement_list -> statement_list statement .)
    CHAR_TYPE       reduce using rule 3 (statement_list -> statement_list statement .)
    BOOL_TYPE       reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 3 (statement_list -> statement_list statement .)
    DEF             reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 3 (statement_list -> statement_list statement .)


state 22

    (5) statement -> declaration NEWLINE .

    TYPE            reduce using rule 5 (statement -> declaration NEWLINE .)
    COMMENT         reduce using rule 5 (statement -> declaration NEWLINE .)
    MLCOMMENT       reduce using rule 5 (statement -> declaration NEWLINE .)
    NEWLINE         reduce using rule 5 (statement -> declaration NEWLINE .)
    INT_TYPE        reduce using rule 5 (statement -> declaration NEWLINE .)
    FLOAT_TYPE      reduce using rule 5 (statement -> declaration NEWLINE .)
    CHAR_TYPE       reduce using rule 5 (statement -> declaration NEWLINE .)
    BOOL_TYPE       reduce using rule 5 (statement -> declaration NEWLINE .)
    ID              reduce using rule 5 (statement -> declaration NEWLINE .)
    IF              reduce using rule 5 (statement -> declaration NEWLINE .)
    WHILE           reduce using rule 5 (statement -> declaration NEWLINE .)
    DEF             reduce using rule 5 (statement -> declaration NEWLINE .)
    $end            reduce using rule 5 (statement -> declaration NEWLINE .)
    RBRACE          reduce using rule 5 (statement -> declaration NEWLINE .)
    RETURN          reduce using rule 5 (statement -> declaration NEWLINE .)


state 23

    (27) assignment -> declaration EQUALS . expression
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression TIMES expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression EQ expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression LT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression LE expression
    (61) expression -> . expression AND expression
    (62) expression -> . expression OR expression
    (63) expression -> . NOT expression
    (64) expression -> . MINUS expression
    (65) expression -> . PLUS expression
    (66) expression -> . LPAREN expression RPAREN
    (67) expression -> . DECIMAL
    (68) expression -> . BINARY
    (69) expression -> . OCTAL
    (70) expression -> . HEXADECIMAL
    (71) expression -> . FLOAT_CONST
    (72) expression -> . TRUE
    (73) expression -> . FALSE
    (74) expression -> . CHAR_CONST
    (75) expression -> . ID

    NOT             shift and go to state 43
    MINUS           shift and go to state 42
    PLUS            shift and go to state 41
    LPAREN          shift and go to state 44
    DECIMAL         shift and go to state 45
    BINARY          shift and go to state 46
    OCTAL           shift and go to state 47
    HEXADECIMAL     shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    CHAR_CONST      shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 60

state 24

    (6) statement -> assignment NEWLINE .

    TYPE            reduce using rule 6 (statement -> assignment NEWLINE .)
    COMMENT         reduce using rule 6 (statement -> assignment NEWLINE .)
    MLCOMMENT       reduce using rule 6 (statement -> assignment NEWLINE .)
    NEWLINE         reduce using rule 6 (statement -> assignment NEWLINE .)
    INT_TYPE        reduce using rule 6 (statement -> assignment NEWLINE .)
    FLOAT_TYPE      reduce using rule 6 (statement -> assignment NEWLINE .)
    CHAR_TYPE       reduce using rule 6 (statement -> assignment NEWLINE .)
    BOOL_TYPE       reduce using rule 6 (statement -> assignment NEWLINE .)
    ID              reduce using rule 6 (statement -> assignment NEWLINE .)
    IF              reduce using rule 6 (statement -> assignment NEWLINE .)
    WHILE           reduce using rule 6 (statement -> assignment NEWLINE .)
    DEF             reduce using rule 6 (statement -> assignment NEWLINE .)
    $end            reduce using rule 6 (statement -> assignment NEWLINE .)
    RBRACE          reduce using rule 6 (statement -> assignment NEWLINE .)
    RETURN          reduce using rule 6 (statement -> assignment NEWLINE .)


state 25

    (8) statement -> TYPE register .

    TYPE            reduce using rule 8 (statement -> TYPE register .)
    COMMENT         reduce using rule 8 (statement -> TYPE register .)
    MLCOMMENT       reduce using rule 8 (statement -> TYPE register .)
    NEWLINE         reduce using rule 8 (statement -> TYPE register .)
    INT_TYPE        reduce using rule 8 (statement -> TYPE register .)
    FLOAT_TYPE      reduce using rule 8 (statement -> TYPE register .)
    CHAR_TYPE       reduce using rule 8 (statement -> TYPE register .)
    BOOL_TYPE       reduce using rule 8 (statement -> TYPE register .)
    ID              reduce using rule 8 (statement -> TYPE register .)
    IF              reduce using rule 8 (statement -> TYPE register .)
    WHILE           reduce using rule 8 (statement -> TYPE register .)
    DEF             reduce using rule 8 (statement -> TYPE register .)
    $end            reduce using rule 8 (statement -> TYPE register .)
    RBRACE          reduce using rule 8 (statement -> TYPE register .)
    RETURN          reduce using rule 8 (statement -> TYPE register .)


state 26

    (19) register -> ID . COLON block

    COLON           shift and go to state 61


state 27

    (10) statement -> COMMENT NEWLINE .

    TYPE            reduce using rule 10 (statement -> COMMENT NEWLINE .)
    COMMENT         reduce using rule 10 (statement -> COMMENT NEWLINE .)
    MLCOMMENT       reduce using rule 10 (statement -> COMMENT NEWLINE .)
    NEWLINE         reduce using rule 10 (statement -> COMMENT NEWLINE .)
    INT_TYPE        reduce using rule 10 (statement -> COMMENT NEWLINE .)
    FLOAT_TYPE      reduce using rule 10 (statement -> COMMENT NEWLINE .)
    CHAR_TYPE       reduce using rule 10 (statement -> COMMENT NEWLINE .)
    BOOL_TYPE       reduce using rule 10 (statement -> COMMENT NEWLINE .)
    ID              reduce using rule 10 (statement -> COMMENT NEWLINE .)
    IF              reduce using rule 10 (statement -> COMMENT NEWLINE .)
    WHILE           reduce using rule 10 (statement -> COMMENT NEWLINE .)
    DEF             reduce using rule 10 (statement -> COMMENT NEWLINE .)
    $end            reduce using rule 10 (statement -> COMMENT NEWLINE .)
    RBRACE          reduce using rule 10 (statement -> COMMENT NEWLINE .)
    RETURN          reduce using rule 10 (statement -> COMMENT NEWLINE .)


state 28

    (11) statement -> MLCOMMENT NEWLINE .

    TYPE            reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    COMMENT         reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    MLCOMMENT       reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    NEWLINE         reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    INT_TYPE        reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    FLOAT_TYPE      reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    CHAR_TYPE       reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    BOOL_TYPE       reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    ID              reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    IF              reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    WHILE           reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    DEF             reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    $end            reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    RBRACE          reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)
    RETURN          reduce using rule 11 (statement -> MLCOMMENT NEWLINE .)


state 29

    (14) declaration -> INT_TYPE var_list .
    (22) var_list -> var_list . COMMA var_decl

    NEWLINE         reduce using rule 14 (declaration -> INT_TYPE var_list .)
    EQUALS          reduce using rule 14 (declaration -> INT_TYPE var_list .)
    COMMA           shift and go to state 62


state 30

    (23) var_list -> var_decl .

    COMMA           reduce using rule 23 (var_list -> var_decl .)
    NEWLINE         reduce using rule 23 (var_list -> var_decl .)
    EQUALS          reduce using rule 23 (var_list -> var_decl .)


state 31

    (20) var_decl -> ID .

    COMMA           reduce using rule 20 (var_decl -> ID .)
    NEWLINE         reduce using rule 20 (var_decl -> ID .)
    EQUALS          reduce using rule 20 (var_decl -> ID .)


state 32

    (21) var_decl -> LBRACKET . expression RBRACKET ID
    (52) expression -> . expression PLUS expression
    (53) expression -> . expression MINUS expression
    (54) expression -> . expression TIMES expression
    (55) expression -> . expression DIVIDE expression
    (56) expression -> . expression EQ expression
    (57) expression -> . expression GT expression
    (58) expression -> . expression LT expression
    (59) expression -> . expression GE expression
    (60) expression -> . expression LE expression
    (61) expression -> . expression AND expression
    (62) expression -> . expression OR expression
    (63) expression -> . NOT expression
    (64) expression -> . MINUS expression
    (65) expression -> . PLUS expression
    (66) expression -> . LPAREN expression RPAREN
    (67) expression -> . DECIMAL
    (68) expression -> . BINARY
    (69) expression -> . OCTAL
    (70) expression -> . HEXADECIMAL
    (71) expression -> . FLOAT_CONST
    (72) expression -> . TRUE
    (73) expression -> . FALSE
    (74) expression -> . CHAR_CONST
    (75) expression -> . ID

    NOT             shift and go to state 43
    MINUS           shift and go to state 42
    PLUS            shift and go to state 41
    LPAREN          shift and go to state 44
    DECIMAL         shift and go to state 45
    BINARY          shift and go to state 46
    OCTAL           shift and go to state 47
    HEXADECIMAL     shift and go to state 48
    FLOAT_CONST     shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    CHAR_CONST      shift and go to state 52
    ID              shift and go to state 53

    expression                     shift and go to state 63

state 33

    (15) declaration -> FLOAT_TYPE var_list .
    (22) var_list -> var_list . COMMA var_decl

    NEWLINE         reduce using rule 15 (declaration -> FLOAT_TYPE var_list .)
    EQUALS          reduce using rule 15 (declaration -> FLOAT_TYPE var_list .)
    COMMA           shift and go to state 62


state 34

    (16) declaration -> CHAR_TYPE var_list .
    (22) var_list -> var_list . COMMA var_decl

    NEWLINE         reduce using rule 16 (declaration -> CHAR_TYPE var_list .)
    EQUALS          reduce using rule 16 (declaration -> CHAR_TYPE var_list .)
    COMMA           shift and go to state 62


state 35

    (17) declaration -> BOOL_TYPE var_list .
    (22) var_list -> var_list . COMMA var_decl

    NEWLINE         reduce using rule 17 (declaration -> BOOL_TYPE var_list .)
    EQUALS          reduce using rule 17 (declaration -> BOOL_TYPE var_list .)
    COMMA           shift and go to state 62


state 36

    (18) declaration -> ID ID .

    NEWLINE         reduce using rule 18 (declaration -> ID ID .)
    EQUALS          reduce using rule 18 (declaration -> ID ID .)


state 37
